@@ -28,7 +28,7 @@
       Made everything static
 -------------------------------------------------------------------------*/
 
-#define D(x) do if (!options.noGenComments) {x;} while(0)
+#define D(x) do if (!options.noVerboseAsm) {x;} while(0)
 
 #include <stdio.h>
 #include <stdlib.h>
